--- a/docs/references.bib
+++ b/docs/references.bib
@@ -313,3 +313,10 @@ Publisher: Nature Publishing Group},
   year={2020},
   publisher={American College of Cardiology Foundation Washington DC}
 }
+
+@article{davis1967structure,
+  title={The structure of positive interpersonal relations in small groups.},
+  author={Davis, James A and Leinhardt, Samuel},
+  year={1967},
+  publisher={ERIC}
+}
